Regression: Geometry Node: Anonymous attribute tooltip display wrong dependencies names #103756

Closed
opened 2023-01-09 13:27:36 +01:00 by Iliya Katushenock · 7 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.56

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-07 22:49, hash: ef78811ac7
Worked: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-04 23:36, hash: a7cc6e015c

Caused by 2ffd08e952

Short description of error

Anonymous attribute tooltip display wrong dependencies names

Worked Broken
image.png image.png

Exact steps for others to reproduce the error

Enter any anonymous attribute via attribute capturing (there may be other ways to create an anonymous attribute)

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.56 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-07 22:49, hash: `ef78811ac7` Worked: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-04 23:36, hash: `a7cc6e015c` Caused by 2ffd08e952 **Short description of error** Anonymous attribute tooltip display wrong dependencies names | Worked | Broken | | -- | -- | | ![image.png](https://archive.blender.org/developer/F14135795/image.png) | ![image.png](https://archive.blender.org/developer/F14135788/image.png) | **Exact steps for others to reproduce the error** Enter any anonymous attribute via attribute capturing (there may be other ways to create an anonymous attribute)
Author
Member

Added subscriber: @mod_moder

Added subscriber: @mod_moder
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Author
Member

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'
Author
Member

Although it seems that the problem is rather that now this hint makes little sense to the user ...

image.png

Although it seems that the problem is rather that now this hint makes little sense to the user ... ![image.png](https://archive.blender.org/developer/F14135812/image.png)

This issue was referenced by ca45c2dc59

This issue was referenced by ca45c2dc59ab663835d2c85e6b22a0f77ab46568
Member

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Jacques Lucke self-assigned this 2023-01-09 14:52:46 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103756
No description provided.