Fix T103756: wrong anonymous attribute tooltip